testf = files ([
	'testarraylist.vala',
	'testarrayqueue.vala',
	'testbidirlist.vala',
	'testbidirsortedmap.vala',
	'testbidirsortedset.vala',
	'testcase.vala',
	'testcollection.vala',
	'testconcurrentlist.vala',
	'testconcurrentset.vala',
	'testdata.vala',
	'testdeque.vala',
	'testfunctions.vala',
	'testhashmap.vala',
	'testhashmultimap.vala',
	'testhashmultiset.vala',
	'testhashset.vala',
	'testlinkedlistasdeque.vala',
	'testlinkedlist.vala',
	'testlist.vala',
	'testmain.vala',
	'testmap.vala',
	'testmultimap.vala',
	'testmultiset.vala',
	'testpriorityqueue.vala',
	'testqueue.vala',
	'testreadonlybidirlist.vala',
	'testreadonlycollection.vala',
	'testreadonlylist.vala',
	'testreadonlymap.vala',
	'testreadonlyset.vala',
	'testset.vala',
	'testsortedmap.vala',
	'testsortedset.vala',
	'testtreemap.vala',
	'testtreemultimap.vala',
	'testtreemultiset.vala',
	'testtreeset.vala',
	'testunrolledlinkedlistasdeque.vala',
	'testunrolledlinkedlist.vala'
])

t = executable('tests',
	testf,
	vala_args : ['--pkg', 'geeutils', '--pkg', 'posix'],
	dependencies : [ gio, include_utils_h_dir_dep, includehdir_dep ],
	link_with: gee
)

test ('tests', t)
