tests_exec = executable(
    'benchmarks',
    'testarraylist.vala',
    'testarrayqueue.vala',
    'testbidirlist.vala',
    'testbidirsortedset.vala',
    'testbidirsortedmap.vala',
    'testcase.vala',
    'testcollection.vala',
    'testconcurrentlist.vala',
    'testconcurrentset.vala',
    'testdata.vala',
    'testdeque.vala',
    'testfunctions.vala',
    'testhashmap.vala',
    'testhashmultimap.vala',
    'testhashmultiset.vala',
    'testhashset.vala',
    'testlinkedlist.vala',
    'testlinkedlistasdeque.vala',
    'testlist.vala',
    'testmain.vala',
    'testmap.vala',
    'testmultimap.vala',
    'testmultiset.vala',
    'testpriorityqueue.vala',
    'testqueue.vala',
    'testreadonlybidirlist.vala',
    'testreadonlycollection.vala',
    'testreadonlylist.vala',
    'testreadonlymap.vala',
    'testreadonlyset.vala',
    'testset.vala',
    'testsortedset.vala',
    'testsortedmap.vala',
    'testtreemap.vala',
    'testtreemultimap.vala',
    'testtreemultiset.vala',
    'testtreeset.vala',
    'testunrolledlinkedlist.vala',
    'testunrolledlinkedlistasdeque.vala',
    dependencies : [gee_dep, posix_dep],
    build_by_default: false,
)

test(
    'tests',
    tests_exec
)
